# autoware_mini_practice

common/data/trajectories/: waypoints_1m.csv  waypoints_5m.csv
practice_1/: CMakeLists.txt  package.xml
practice_1/launch/: practice_1.launch
practice_1/nodes/: publisher.py
practice_2/: CMakeLists.txt
practice_2/nodes/localization/: localizer.py
practice_3/: CMakeLists.txt
practice_3/launch/: practice_3.launch
practice_3/nodes/control/: pure_pursuit_follower.py
practice_4/: CMakeLists.txt
practice_4/launch/: practice_4.launch
practice_4/nodes/control/: pure_pursuit_follower.py
practice_4/nodes/planning/global/: lanelet2_global_planner.py
practice_5/: CMakeLists.txt
practice_5/nodes/control/: pure_pursuit_follower.py
practice_5/nodes/detection/lidar_cluster/: cluster_detector.py  points_clusterer.py
practice_5/nodes/planning/global/: lanelet2_global_planner.py
practice_6/: CMakeLists.txt
practice_6/nodes/detection/lidar_cluster/: points_clusterer.py
practice_6/nodes/planning/global/: lanelet2_global_planner.py
practice_6/nodes/planning/local/: simple_local_planner.py
practice_7/: CMakeLists.txt
practice_7/nodes/control/: pure_pursuit_follower.py
practice_7/nodes/detection/tfl_camera/: camera_traffic_light_detector.py
practice_7/nodes/localization/: localizer.py
practice_7/nodes/planning/global/: lanelet2_global_planner.py
practice_7/nodes/planning/local/: simple_local_planner.py
practice_8/launch/: start_carla.launch
